...
  <string name="fraction_error_larger_than_seven_digits">None of the numbers in the fraction should have more than 7 digits.</string>
  <string name="fraction_error_empty_input">Enter a fraction to continue.</string>
  <string name="number_error_starting_with_floating_point">Please begin your answer with a number (e.g.,”0” in 0.5).</string>
  <string name="number_error_invalid_format">Please enter a valid number.</string>
  <string name="number_error_larger_than_fifteen_characters">The answer can contain at most 15 digits (0–9) or symbols (. or -).</string>
  <string name="number_error_empty_input">Enter a number to continue.</string>
  <string name="ratio_error_invalid_chars" description="The error message for ratio when there is any other character used than 0123456789:.">Please write a ratio that consists of digits separated by colons (e.g. 1:2 or 1:2:3).</string>
  <string name="ratio_error_invalid_format" description="The error message for ratio when the format is invalid. For example, 1:2:3: or 1:2 3:4.">Please enter a valid ratio (e.g. 1:2 or 1:2:3).</string>
  <string name="ratio_error_invalid_colons" description="The error message for ratio when there are colons next to each other.">Your answer has two colons (:) next to each other.</string>
  <string name="ratio_error_invalid_size" description="The error message for ratio when the number of terms is less than the creator has specified in the customization arg.">Number of terms is not equal to the required terms.</string>
  <string name="ratio_error_includes_zero" description="The error message for ratio when there is a 0 term in the ratio.">Ratios cannot have 0 as an element.</string>
  <string name="ratio_error_empty_input" description="The error message for ratio when the answer is empty.">Enter a ratio to continue.</string>
  <string name="text_error_empty_input">Enter text to continue.</string>
  <string name="selection_error_empty_input">Choose an answer to continue.</string>
  <string name="unknown_size">Unknown size</string>
  <string name="size_bytes">%s Bytes</string>
  <string name="size_kb">%s KB</string>
  <string name="size_mb">%s MB</string>
...
